--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
       ];
 
       CONST ESCUDOS = [
-        { nome: 'Escudo de Corpo', ca: 1, preco: { quantidade: 10, moeda: 'po' }, peso: 7.5 },
-        { nome: 'Broquei (escudo)', ca: 1, preco: { quantidade: 1, moeda: 'po' }, peso: 1.5 },
-        { nome: 'Escudo Médio', ca: 1, preco: { quantidade: 7, moeda: 'po' }, peso: 5 },
-        { nome: 'Escudo Pequeno', ca: 1, preco: { quantidade: 3, moeda: 'po' }, peso: 2.5 }
+        { nome: 'Escudo de Corpo', ca_melee: 1, ca_distancia: 2, preco: { quantidade: 10, moeda: 'po' }, peso: 7.5, ataques_por_rodada: 0 },
+        { nome: 'Broquei (escudo)', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 1, moeda: 'po' }, peso: 1.5, ataques_por_rodada: 1 },
+        { nome: 'Escudo Médio', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 7, moeda: 'po' }, peso: 5, ataques_por_rodada: 0 },
+        { nome: 'Escudo Pequeno', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 3, moeda: 'po' }, peso: 2.5, ataques_por_rodada: 2 }
       ];
 
       CONST ARMADURAS = [
@@ -338,6 +338,7 @@
         { nome: 'Brunea', ca: 6, preco: { quantidade: 120, moeda: 'po' }, peso: 20 },
         { nome: 'Gibão de Peles', ca: 6, preco: { quantidade: 15, moeda: 'po' }, peso: 15 },
         { nome: 'Cota de Malha', ca: 5, preco: { quantidade: 75, moeda: 'po' }, peso: 20 },
+        { nome: 'Cota de Malha Élfica', ca: 5, preco: { quantidade: 200, moeda: 'po' }, peso: 10 },
         { nome: 'Cota de Talas', ca: 4, preco: { quantidade: 80, moeda: 'po' }, peso: 20 },
         { nome: 'Loriga Segmentada', ca: 4, preco: { quantidade: 200, moeda: 'po' }, peso: 17.5 },
         { nome: 'Armadura de Bronze', ca: 4, preco: { quantidade: 400 , moeda: 'po' }, peso: 22.5 },
@@ -348,11 +349,42 @@
         { nome: 'Basinet' ca: 0, preco: { quantidade: 8, moeda: 'po' }, peso: 2.5 }
       ];
 
+      CONST ESCUDOS_DRUIDA = {
+        ESCUDOS[1],
+        ESCUDOS[2],
+        ESCUDOS[3]
+      }
+
+      CONST ESCUDOS_LADRAO = {
+        ESCUDOS[1],
+        ESCUDOS[2],
+        ESCUDOS[3]
+      }
+
       CONST ARMADURAS_DRUIDA = [
         ARMADURAS[0],
         ARMADURAS[1],
         ARMADURAS[2],
         ARMADURAS[6]
+      ];
+
+      CONST ARMADURAS_LADRAO = [
+        ARMADURAS[0],
+        ARMADURAS[1],
+        ARMADURAS[2],
+        ARMADURAS[8]
+      ];
+
+      CONST ARMADURAS_BARDO = [
+        ARMADURAS[0],
+        ARMADURAS[1],
+        ARMADURAS[2],
+        ARMADURAS[3],
+        ARMADURAS[4],
+        ARMADURAS[5],
+        ARMADURAS[6],
+        ARMADURAS[7],
+        ARMADURAS[8]
       ];
 
       const CLASSES = {
@@ -368,7 +400,8 @@
             'Como um mestre dos diferentes tipos de armamento, o guerreiro é o único capaz de ter uma especialízação em armas.'
           ],
           armas: [],
-          armaduras: ARMADURAS
+          armaduras: ARMADURAS,
+          escudos: ESCUDOS
         },
         "Paladino": {
           "Grupo": "Homem de Armas",
@@ -398,7 +431,9 @@
             'Um paladino não forma um grupo de seguidores ao alcançar o 9º nível ou construir um castelo. Todavia, ele pode contratar soldados e especialistas, embora esses homens devam ter tendência justa.',
             'Um paladino só pode empregar aliados justos'
           ],
-          armas: []
+          armas: [],
+          armaduras: ARMADURAS,
+          escudos: ESCUDOS
         },
         "Ranger": {
           "Grupo": "Homem de Armas",
@@ -430,7 +465,8 @@
             'Rangers tendem a ser figuras solitárias, sempre com o pé na estrada. Eles não podem ter aliados, empregados, mercenários ou mesmo servos até que alcancem o 8º nível.'
           ],
           armas: [],
-          armaduras: ARMADURAS
+          armaduras: ARMADURAS,
+          escudos: ESCUDOS
         },
         "Mago": {
           "Grupo": "Arcano",
@@ -447,7 +483,8 @@
             'Todos os arcanos recebem um d4 de vida por nível do personagem, do 1º até o 10º. Depois do 10º, arcanos ganham 1 ponto de vida por nível.'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Abjurante": {
           "Grupo": "Arcano",
@@ -470,7 +507,8 @@
             'Um Abjurante não pode aprender magias das escolas de Alteração e Ilusão.'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Conjurador": {
           "Grupo": "Arcano",
@@ -493,7 +531,8 @@
             'Um Conjurador não pode aprender magias das escolas de Profecia e Invocação'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Adivinho": {
           "Grupo": "Arcano",
@@ -516,7 +555,8 @@
             'Um Adivinho não pode aprender magias da escola de Conjuração/Convocação'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Feiticeiro": {
           "Grupo": "Arcano",
@@ -539,7 +579,8 @@
             'Um Feiticeiro não pode aprender magias das escolas de Invocação/Evocação e Necromancia'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Ilusionista": {
           "Grupo": "Arcano",
@@ -562,7 +603,8 @@
             'Um Ilusionista não pode aprender magias das escolas de Necromancia, Invocação/Evocação e Abjuração'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Invocador": {
           "Grupo": "Arcano",
@@ -585,7 +627,8 @@
             'Um Invocador não pode aprender magias das escolas de Encantamento/Feitiço e Conjuração/Convocação'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Necromante": {
           "Grupo": "Arcano",
@@ -608,7 +651,8 @@
             'Um Necromante não pode aprender magias das escolas de Ilusão e Encantamento/Feitiço'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Transmutador": {
           "Grupo": "Arcano",
@@ -631,7 +675,8 @@
             'Um Transmutador não pode aprender magias das escolas de Abjuração e Necromancia'
           ],
           armas: ["Cajado", "Adaga", "Punhal", "Dardo", "Faca", "Funda"],
-          armaduras: []
+          armaduras: [],
+          escudos: []
         },
         "Clérigo": {
           "Grupo": "Sacerdote",
@@ -654,6 +699,7 @@
           ],
           armas: ["Mangual", "Martelo de Batalha", "Açoite", "Chicote", "Alvião", "Aprisionador", "Bordão", "Arco", "Azagaia", "Lança de Cavalaria", "Funda", "Dardo", "Lança", "Clava", "Arpão", "Tridente", "Martelo", "Maça", "Maça-Estrela", "Zarabatana"],
           armaduras: ARMADURAS,
+          escudos: ESCUDOS,
           armas_divindade: []
         },
         "Druida": {
@@ -698,7 +744,8 @@
             'No 20º nivel o druida ganha o poder entrar e sobreviver no plano elemental do Ar.'
           ],
           armas: ["Clava", "Foice", "Dardo", "Lança", "Adaga", "Cimitarra", "Funda", "Cajado"],
-          armaduras: ARMADURAS_DRUIDA
+          armaduras: ARMADURAS_DRUIDA,
+          escudos: ESCUDOS_DRUIDA
         },
         "Ladrão": {
           "Grupo": "Ladino",
@@ -717,9 +764,44 @@
           ],
           dado_de_vida: 6,
           detalhes: [
-            'O ladrão com 16 ou mais de Destreza ganha um bônus de 10% em sua experiência.'
+            'O ladrão com 16 ou mais de Destreza ganha um bônus de 10% em sua experiência.',
+            'Se o ladrão vestir uma armadura que não seja o corselete de couro simples, seus talentos especiais sofrerão penalidades.',
+            'Cada vez que o ladrão subir de nível, o jogador ganhará outros 30 pontos percentuais como um bõnus para distribuir aos números básicos dos talentos, sendo que no máximo 15 poderão ser somados a um único item, e nenhum dos talentos pode chegar a mais de 95%, incluindo todos os ajustes feitos por Destreza, raça e armadura.',
+            'Uma falha no uso do talento Furtar Bolsos indica que o personagem não obteve o item, mas não significa que a tentativa foi notada pela vítima. Para determinar se isso ocorreu, subtraia o triplo do nlvel da vítima de 100. Se o resultado do lance de dados do ladrão tiver sido maior ou igual a esse número, então a tentalíva de roubo foi notada.',
+            'Abrir Fechaduras requer ferramentas. Usar as ferramentas trpicas do ladrão garante as chances normais de sucesso. Usar ferramentas improvisadas (arames, garfos, gravetos, etc.) provoca uma penalida. O Mestre determina a penalidade baseado na situação: de -5 para uma ferramenta improvisada, mas adequada, até -60 por itens desajeitados e inadequados (como um graveto).',
+            'O tempo necessário para um arrombamento (Abrir Fechaduras), Achar Armadilhas e Desarmar Armadilhas é de 1d10 rodadas.',
+            'O ladrão pode tentar abrir uma fechadura em particular apenas uma vez por nível.',
+            'O talento Achar/Desarmar Armadilhas não serve para encontrar tetos que desabam, paredes que deslizam para esmagar a vítima ou outras grandes armadilhas mecânicas similares.',
+            'Um ladrão pode procurar por armadilhas em um determinado item uma vez por nível.',
+            'Ao usar o taleto Desarmar Armadilhas, se o resultado dos dados ficar entre 96 e 100, o ladrão aciona acidentalmente a armadilha e sofre as conseqüências.',
+            'Os ladrões podem tentar Desarmar Armadilhas mágicas, mas suas chances de sucesso são apenas metade da porcentagem normal.',
+            'Enquanto utilizar o talento Mover-se em Silêncio, o personagem terá sua movimentação reduzida a 1/3 da normal.',
+            'O ladrão não pode Esconder-se nas Sombras enquanto estiver sendo observado.',
+            'No 4° nível, o ladrão já teve contato com um número suficiente de linguagens para ser capaz de decifrar a maioria das inscrições não-mágicas com o talento Decifrar Linguagens.',
+            'Ao usar o talento Decifrar Linguagens, o nível de compreensão é aproximadamente igual à chance percentual de sucesso na leitura: uma chance de 20% indica que, caso consiga ler o documento, o ladrão compreenderá cerca de 20% do significado.',
+            'Apenas um teste de Decifrar Linguagens pode ser feito para um documento em particular por nível.',
+            'Quando estiver atacando alguém de surpresa, e pelas costas, o personagem recebe um bônus que aumenta a sua chance de acerto (um modificador de +4, e a anulação dos benefícios de escudo e de Destreza do alvo) e que também amplia o dano causado.',
+            'O Ataque pelas Costas multiplica o dano da arma (sem somar força e bônus de armas mágicas) por: x2 nos níveis de 1 a 4; x3 nos níveis de 5 a 8; x4 nos níveis de 9 a 12; e x5 a partir do nível 13. Após multiplicar, soma-se os bônus de Força e arma mágica.',
+            'O multiplicador de dano do Ataque pelas Costas só se aplica ao primeiro golpe desferido pelo ladrão, mesmo que ele tenha múltiplos ataques.',
+            'A partir do 10º nível, o ladrão ganha uma capacidade limitada de usar pergaminhos, arcanos ou sacerdotais. O personagem tem uma chance de 25% de ler incorretamente o pergaminho.',
+            'Quando um ladrão atinge o 10º nível, sua reputação é tão grande que ele atrai 4d6 seguidores.'
           ],
-          armas: ['Clava', 'Adaga', 'Besta de Mão', 'Espada Longa', 'Dardo', 'Faca', 'Laço', 'Arco Curto', 'Funda', 'Espada Larga', 'Espada Curta', 'Cajado']
+          armas: ['Clava', 'Adaga', 'Besta de Mão', 'Espada Longa', 'Dardo', 'Faca', 'Laço', 'Arco Curto', 'Funda', 'Espada Larga', 'Espada Curta', 'Cajado'],
+          armaduras: ARMADURAS_LADRAO,
+          escudos: ESCUDOS_LADRAO,
+          talentos: {
+            'Furtar Bolsos': 15,
+            'Abrir Fechaduras': 10,
+            'Achar/Desarmar Armadilhas': 5,
+            'Mover-se em Silêncio': 10,
+            'Esconder-se uas Sombras': 5,
+            'Ouvir Ruídos': 15,
+            'Escalar Muros': 60,
+            'Decifrar Linguagens': 0,
+            'Ataque pelas Costas': 'Vide detalhes',
+            'Gíria dos ladrões': 'Vide detalhes',
+            'Usar Pergaminhos': 0
+          }
         },
         "Bardo": {
           "Grupo": "Ladino",
@@ -735,9 +817,32 @@
           ],
           dado_de_vida: 6,
           detalhes: [
-            'O bardo com 16 ou mais de Destreza e Carisma ganha um bônus de 10% em sua experiência.'
+            'O bardo com 16 ou mais de Destreza e Carisma ganha um bônus de 10% em sua experiência.',
+            'O bardo poderá aprender dois instrumentos musicais por ponto de perícia empregado.',
+            'Durante suas viagens, um bardo aprende algumas magias arcanas. Igual a um arcano, sua Inteligência determinará o número permitido e a chance que ele tem de aprender magias. O personagem anota as fórmulas em um grimoire e, para utilizá-las deve obedecer a todas as restrições impostas aos arcanos, como a regra de memorização e a impossibilidade de usar armadura durante a conjuração.',
+            'Cada vez que o bardo subir de nível, o jogador ganhará 15 pontos percentuais como um bõnus para distribuir aos números básicos dos talentos.',
+            'Uma falha no uso do talento Furtar Bolsos indica que o personagem não obteve o item, mas não significa que a tentativa foi notada pela vítima. Para determinar se isso ocorreu, subtraia o triplo do nlvel da vítima de 100. Se o resultado do lance de dados do bardo tiver sido maior ou igual a esse número, então a tentalíva de roubo foi notada.',
+            'Ao usar o talento Decifrar Linguagens, o nível de compreensão é aproximadamente igual à chance percentual de sucesso na leitura: uma chance de 20% indica que, caso consiga ler o documento, o ladrão compreenderá cerca de 20% do significado.',
+            'Apenas um teste de Decifrar Linguagens pode ser feito para um documento em particular por nível.',
+            'O bardo pode influenciar as reações de grupos de PdMs. Quando atua diante de um grupo que não esteja em ataque (e que não pretenda atacar nos próximos segundos), o bardo pode tentar influenciar o humor dos ouvintes, tanto para melhor como para pior. Todos aqueles no grupo ouvinte devem fazer um teste de resistência contra paralisação. O teste é modificado em -1 para cada três níveis de experiência do bardo (arredonde as frações para baixo).',
+            'O bardo pode inspirar amigos e aliados, concedendo um bônus de +1 nas jogadas de ataque, ou um bônus de + 1nos testes de resislência, ou um bônus de +2 na moral (particularmente útil em grandes batalhas) para aqueles que estiverem envolvidos em combate corpo a corpo. O bardo deve passar pelo menos três rodadas completas cantando ou recitando antes que a batalha comece. Isto afeta aqueles dentro de um raio de 3 metros por nível do personagem.',
+            'O efeito da inspiração do aliados dura uma rodada por nível do bardo. Uma vez que tenha se dissipado, o efeito não pode ser renovado enquanto os receptores ainda estiverem em batalha.',
+            'Bardos também podem anular os efeitos de canções e poesias usados como ataques mágicos. Personagens a até 10 metros do bardo são imunes a ataques desse tipo, desde que ele cante uma canção para anulara magia. Para obter sucesso, o bardo deve passar em um teste de resistência contra magias. O bardo pode usar essa capacidade uma vez por encontro ou batalha.',
+            'Todos os bardos podem ler e escrever em sua língua nativa.',
+            'Bardos têm uma chance de 5% por nível para identificar o propósito geral e a função de qualquer item mágico. A função exata do item não é revelada, apenas a sua natureza geral.',
+            'O bardo pode construir uma fortaleza e atrair 10d6 soldados de nível 0 quando atingir o 9º nível.',
+            'A partir do 10º nível, o bardo ganha uma capacidade limitada de usar pergaminhos, arcanos ou sacerdotais. O personagem tem uma chance de 15% de ler incorretamente o pergaminho.'
           ],
-          armas: []
+          armas: [],
+          armaduras: ARMADURAS_BARDO,
+          escudos: [],
+          talentos: {
+            'Escalar Muros': 50,
+            'Ouvir Ruídos': 20,
+            'Furtar Bolsos': 10,
+            'Decifrar Linguagens': 5,
+            'Identificar Item Mágico': 5
+          }
         }
       };
 
@@ -2696,6 +2801,57 @@
         }
       }
 
+      function definir_talentos(classe, personagem, callback) {
+        if (CLASSES[classe]["Grupo"] == "Ladino") {
+          let keys_classes = Object.keys(CLASSES);
+        } else {
+          callback();
+        }
+
+
+        /*
+        let keys_classes = Object.keys(CLASSES);
+        let classes_permitidas = [];
+
+        keys_classes.forEach((classe,index_classes) => {
+          let keys_racas = CLASSES[classe]["Raças Permitidas"];
+          let classe_permitida = false;
+
+          keys_racas.forEach((raca, index_classe_permitida) => {
+            if (ajustar_nome_raca(personagem) == raca) {
+              classe_permitida = true;
+            }
+
+            if (index_classe_permitida == (keys_racas.length - 1)) {
+              if (classe_permitida) {
+                classes_permitidas.push(classe);
+              }
+            }
+          });
+
+          if (index_classes == (keys_classes.length - 1)) {
+            callback(classes_permitidas);
+          }
+        });
+        */
+      }
+
+      function ajustar_talentos_pela_destreza() {
+        talentos: {
+          'Furtar Bolsos': 15,
+          'Abrir Fechaduras': 10,
+          'Achar/Desarmar Armadilhas': 5,
+          'Mover-se em Silêncio': 10,
+          'Esconder-se uas Sombras': 5,
+          'Ouvir Ruídos': 15,
+          'Escalar Muros': 60,
+          'Decifrar Linguagens': 0,
+          'Ataque pelas Costas': 'Vide detalhes',
+          'Gíria dos ladrões': 'Vide detalhes',
+          'Usar Pergaminhos': 0
+        }
+      }
+
       function sortear_dados_basicos(personagem, callback) {
         let classe = ajustar_nome_classe(personagem);
         let raca = ajustar_nome_raca(personagem);
@@ -2844,6 +3000,17 @@
           personagem["Habilidades"]["Carisma"]["Nº Máximo de aliados"] = atributos_carisma("Nº Máximo de aliados", carisma);
           personagem["Habilidades"]["Carisma"]["Fator de Lealdade"] = atributos_carisma("Fator de Lealdade", carisma);
           personagem["Habilidades"]["Carisma"]["Ajuste de reação"] = atributos_carisma("Ajuste de reação", carisma);
+
+          /* Ajustar talentos dos ladinos */
+          if (CLASSES[classe]["Grupo"] == "Ladino") {
+
+          }
+
+          // 60 pontos talentos ladrão, sendo no maximo 30 por item
+          // movimentação
+          // calcular CA
+          // instrumento musical do bardo, já com a perícia
+          // perícia História Local para o bardo
 
           callback();
 
