--- a/index.html
+++ b/index.html
@@ -185,7 +185,21 @@
           peso: { "Masculino": { minimo: 70, maximo: 100 }, "Feminino": { minimo: 50, maximo: 80 }},
           linguas_importantes: [ "comum" ],
           linguas: [ 'élfico', 'do anões', 'dos gnomos', 'dos halflings', 'dos goblins', 'dos robgoblins', 'dos orcs', 'dos gnolls' ],
-          armas_importantes: []
+          armas_importantes: [],
+          talentos: {
+            'Furtar Bolsos': 0,
+            'Abrir Fechaduras': 0,
+            'Achar/Desarmar Armadilhas': 0,
+            'Mover-se em Silêncio': 0,
+            'Esconder-se nas Sombras': 0,
+            'Ouvir Ruídos': 0,
+            'Escalar Muros': 0,
+            'Decifrar Linguagens': 0,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         },
         "Anão": {
           "Força": { minimo: 8, maximo: 18 },
@@ -213,7 +227,21 @@
           peso: { "Masculino": { minimo: 65, maximo: 85 }, "Feminino": { minimo: 52, maximo: 72 }},
           linguas_importantes: [ "comum", "dos anões" ],
           linguas: [ "dos gnomos", "dos goblins", "dos kobolds", "dos ogros" ],
-          armas_importantes: []
+          armas_importantes: [],
+          talentos: {
+            'Furtar Bolsos': 0,
+            'Abrir Fechaduras': 10,
+            'Achar/Desarmar Armadilhas': 15,
+            'Mover-se em Silêncio': 0,
+            'Esconder-se nas Sombras': 0,
+            'Ouvir Ruídos': 0,
+            'Escalar Muros': -10,
+            'Decifrar Linguagens': -5,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         },
         "Elfo": {
           "Força": { minimo: 3, maximo: 18 },
@@ -237,7 +265,21 @@
           peso: { "Masculino": { minimo: 45, maximo: 61 }, "Feminino": { minimo: 35, maximo: 51 }},
           linguas_importantes: [ "comum", 'élfico' ],
           linguas: [ 'dos gnomos', 'dos halflings', 'dos goblins', 'dos robgoblins', 'dos orcs', 'dos gnolls' ],
-          armas_importantes: [ 'Arco longo composto', 'Arco curto composto', 'Arco longo', 'Arco curto', 'Espada longa', 'Espada curta' ]
+          armas_importantes: [ 'Arco longo composto', 'Arco curto composto', 'Arco longo', 'Arco curto', 'Espada longa', 'Espada curta' ],
+          talentos: {
+            'Furtar Bolsos': 5,
+            'Abrir Fechaduras': -5,
+            'Achar/Desarmar Armadilhas': 0,
+            'Mover-se em Silêncio': 5,
+            'Esconder-se nas Sombras': 10,
+            'Ouvir Ruídos': 5,
+            'Escalar Muros': 0,
+            'Decifrar Linguagens': 0,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         },
         "Gnomo": {
           "Força": { minimo: 6, maximo: 18 },
@@ -263,7 +305,21 @@
           peso: { "Masculino": { minimo: 36, maximo: 56 }, "Feminino": { minimo: 34, maximo: 54 }},
           linguas_importantes: [ "comum", "dos gnomos" ],
           linguas: [ "dos anões", "dos halflings", "dos goblins", "dos kobolds", "linguagem simples dos mamíferos que vivem em tocas (esquilos terrestres, texugos, musaranhos, doninhas, etc.)" ],
-          armas_importantes: []
+          armas_importantes: [],
+          talentos: {
+            'Furtar Bolsos': 0,
+            'Abrir Fechaduras': 5,
+            'Achar/Desarmar Armadilhas': 10,
+            'Mover-se em Silêncio': 5,
+            'Esconder-se nas Sombras': 5,
+            'Ouvir Ruídos': 10,
+            'Escalar Muros': -15,
+            'Decifrar Linguagens': 0,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         },
         "Meio-Elfo": {
           "Força": { minimo: 3, maximo: 18 },
@@ -284,7 +340,21 @@
           peso: { "Masculino": { minimo: 55, maximo: 73 }, "Feminino": { minimo: 42, maximo: 60 }},
           linguas_importantes: [ "comum", "élfico" ],
           linguas: [ "dos gnomos", "dos halflings", "dos goblins", "dos hobgloblins", "dos orcs", "dos gnolls" ],
-          armas_importantes: []
+          armas_importantes: [],
+          talentos: {
+            'Furtar Bolsos': 10,
+            'Abrir Fechaduras': 0,
+            'Achar/Desarmar Armadilhas': 0,
+            'Mover-se em Silêncio': 0,
+            'Esconder-se nas Sombras': 5,
+            'Ouvir Ruídos': 0,
+            'Escalar Muros': 0,
+            'Decifrar Linguagens': 0,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         },
         "Halfling": {
           "Força": { minimo: 7, maximo: 18 },
@@ -306,7 +376,21 @@
           peso: { "Masculino": { minimo: 26, maximo: 46 }, "Feminino": { minimo: 24, maximo: 44 }},
           linguas_importantes: [ "comum", "dos halflings" ],
           linguas: [ "dos anões", "élfico", "dos gnomos", "dos goblins", "dos orcs" ],
-          armas_importantes: [ 'Funda', 'Dardo', 'Arco curto', 'Zarabatana' ]
+          armas_importantes: [ 'Funda', 'Dardo', 'Arco curto', 'Zarabatana' ],
+          talentos: {
+            'Furtar Bolsos': 5,
+            'Abrir Fechaduras': 5,
+            'Achar/Desarmar Armadilhas': 5,
+            'Mover-se em Silêncio': 10,
+            'Esconder-se nas Sombras': 15,
+            'Ouvir Ruídos': 5,
+            'Escalar Muros': -15,
+            'Decifrar Linguagens': -5,
+            'Ataque pelas Costas': '',
+            'Gíria dos ladrões': '',
+            'Usar Pergaminhos': 0,
+            'Identificar Item Mágico': 0
+          }
         }
       };
 
@@ -322,14 +406,14 @@
         "Cruel (caótico e maligno)"
       ];
 
-      CONST ESCUDOS = [
+      const ESCUDOS = [
         { nome: 'Escudo de Corpo', ca_melee: 1, ca_distancia: 2, preco: { quantidade: 10, moeda: 'po' }, peso: 7.5, ataques_por_rodada: 0 },
         { nome: 'Broquei (escudo)', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 1, moeda: 'po' }, peso: 1.5, ataques_por_rodada: 1 },
         { nome: 'Escudo Médio', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 7, moeda: 'po' }, peso: 5, ataques_por_rodada: 0 },
         { nome: 'Escudo Pequeno', ca_melee: 1, ca_distancia: 1, preco: { quantidade: 3, moeda: 'po' }, peso: 2.5, ataques_por_rodada: 2 }
       ];
 
-      CONST ARMADURAS = [
+      const ARMADURAS = [
         { nome: 'Corselete de Couro Simples', ca: 8, preco: { quantidade: 5, moeda: 'po' }, peso: 7.5 },
         { nome: 'Corselete de Couro Acolchoado', ca: 8, preco: { quantidade: 4, moeda: 'po' }, peso: 5 },
         { nome: 'Corselete de Couro Batido', ca: 7, preco: { quantidade: 20, moeda: 'po' }, peso: 12.5 },
@@ -344,38 +428,38 @@
         { nome: 'Armadura de Bronze', ca: 4, preco: { quantidade: 400 , moeda: 'po' }, peso: 22.5 },
         { nome: 'Armadura Simples', ca: 3, preco: { quantidade: 600, moeda: 'po' }, peso: 25 },
         { nome: 'Armadura de Batalha', ca: 2, preco: { quantidade: 2000, moeda: 'po' }, peso: 30 },
-        { nome: 'Armadura Completa' ca: 1, preco: { quantidade: 4000, moeda: 'po' }, peso: 35 },
-        { nome: 'Elmo Grande' ca: 0, preco: { quantidade: 30, moeda: 'po' }, peso: 5 },
-        { nome: 'Basinet' ca: 0, preco: { quantidade: 8, moeda: 'po' }, peso: 2.5 }
+        { nome: 'Armadura Completa', ca: 1, preco: { quantidade: 4000, moeda: 'po' }, peso: 35 },
+        { nome: 'Elmo Grande', ca: 0, preco: { quantidade: 30, moeda: 'po' }, peso: 5 },
+        { nome: 'Basinet', ca: 0, preco: { quantidade: 8, moeda: 'po' }, peso: 2.5 }
       ];
 
-      CONST ESCUDOS_DRUIDA = {
+      const ESCUDOS_DRUIDA = [
         ESCUDOS[1],
         ESCUDOS[2],
         ESCUDOS[3]
-      }
+      ];
 
-      CONST ESCUDOS_LADRAO = {
+      const ESCUDOS_LADRAO = [
         ESCUDOS[1],
         ESCUDOS[2],
         ESCUDOS[3]
-      }
+      ];
 
-      CONST ARMADURAS_DRUIDA = [
+      const ARMADURAS_DRUIDA = [
         ARMADURAS[0],
         ARMADURAS[1],
         ARMADURAS[2],
         ARMADURAS[6]
       ];
 
-      CONST ARMADURAS_LADRAO = [
+      const ARMADURAS_LADRAO = [
         ARMADURAS[0],
         ARMADURAS[1],
         ARMADURAS[2],
         ARMADURAS[8]
       ];
 
-      CONST ARMADURAS_BARDO = [
+      const ARMADURAS_BARDO = [
         ARMADURAS[0],
         ARMADURAS[1],
         ARMADURAS[2],
@@ -723,7 +807,7 @@
             'Ele toma-se imune à magias de Encantar lançadas por criaturas da floreste depois que atinge o 7º nível.',
             'Ele ganha 1 habilidade de se metamorfosear em um réptil, ave ou mamífero até três vezes por dia após atingir o 7º nível. Quando o druida assume uma nova forma, ele cura de 1d6x10% de todo o dano que porventura tenha sofrido.',
             'Um Druida não pode usar o poder da fé contra mortos-vivos.',
-            'O visco é um importante símbolo sagrado para os druidas, e é um componente necessário (símbolo sagrado) para algumas magias. Para ser realmente eficiente, o visco deve ser colhido sob a luz da tua cheia, com uma foice de prata especialmente feita para este propósito. Visco obtido por outros meios reduz em 50% a eficiência de uma magia, se ela causar dano ou tiver uma área de efeito, e concede ao alvo um bônus de +2 em seu teste de resistência.',
+            'O visco é um importante símbolo sagrado para os druidas, e é um componente necessário (símbolo sagrado) para algumas magias. Para ser realmente eficiente, o visco deve ser colhido sob a luz da lua cheia, com uma foice de prata especialmente feita para este propósito. Visco obtido por outros meios reduz em 50% a eficiência de uma magia, se ela causar dano ou tiver uma área de efeito, e concede ao alvo um bônus de +2 em seu teste de resistência.',
             'Os druidas, como uma classe, não moram permanentemente em castelos, cidades ou vilas. Eles preferem viver em bosques sagrados, onde erguem pequenas cabanas de tronco, pedras ou relva.',
             'No 12º nível, o personagem adquire o título oficial de druida (nível inferior ao 12º são conhecidos como iniciados).',
             'Quando um personagem ascende ao 12° nível, ele ganha três subalternos, cujos níveis dependem da posição do novo druida entre os nove druidas da região. O druida com mais pontos de experiência é servido por três iniciados do 9° nível; o segundo com mais experiência é servido por três iniciados do 8° nível, e assim por diante, até que o druida menos experiente é servido por três iniciados do 1º nível.',
@@ -794,7 +878,7 @@
             'Abrir Fechaduras': 10,
             'Achar/Desarmar Armadilhas': 5,
             'Mover-se em Silêncio': 10,
-            'Esconder-se uas Sombras': 5,
+            'Esconder-se nas Sombras': 5,
             'Ouvir Ruídos': 15,
             'Escalar Muros': 60,
             'Decifrar Linguagens': 0,
@@ -2803,53 +2887,92 @@
 
       function definir_talentos(classe, personagem, callback) {
         if (CLASSES[classe]["Grupo"] == "Ladino") {
-          let keys_classes = Object.keys(CLASSES);
+          personagem["Talentos"] = {};
+          let keys_talentos = Object.keys(CLASSES[classe].talentos);
+          keys_talentos.forEach((talento, index_talento) => {
+            let destreza = personagem["Habilidades"]["Destreza"]["Valor da Habilidade"];
+            let raca = ajustar_nome_raca(personagem);
+            personagem["Talentos"][talento] =
+              CLASSES[classe].talentos[talento] +
+              ajustar_talentos_pela_destreza(destreza,talento) +
+              RACAS[raca].talentos[talento];
+
+            if (index_talento == (keys_talentos.length - 1)) {
+              callback();
+            }
+          });
         } else {
           callback();
         }
-
-
-        /*
-        let keys_classes = Object.keys(CLASSES);
-        let classes_permitidas = [];
-
-        keys_classes.forEach((classe,index_classes) => {
-          let keys_racas = CLASSES[classe]["Raças Permitidas"];
-          let classe_permitida = false;
-
-          keys_racas.forEach((raca, index_classe_permitida) => {
-            if (ajustar_nome_raca(personagem) == raca) {
-              classe_permitida = true;
-            }
-
-            if (index_classe_permitida == (keys_racas.length - 1)) {
-              if (classe_permitida) {
-                classes_permitidas.push(classe);
-              }
-            }
-          });
-
-          if (index_classes == (keys_classes.length - 1)) {
-            callback(classes_permitidas);
-          }
-        });
-        */
       }
 
-      function ajustar_talentos_pela_destreza() {
-        talentos: {
-          'Furtar Bolsos': 15,
-          'Abrir Fechaduras': 10,
-          'Achar/Desarmar Armadilhas': 5,
-          'Mover-se em Silêncio': 10,
-          'Esconder-se uas Sombras': 5,
-          'Ouvir Ruídos': 15,
-          'Escalar Muros': 60,
-          'Decifrar Linguagens': 0,
-          'Ataque pelas Costas': 'Vide detalhes',
-          'Gíria dos ladrões': 'Vide detalhes',
-          'Usar Pergaminhos': 0
-        }
+      function ajustar_talentos_pela_destreza(destreza,talento) {
+        if ( (talento == 'Ataque pelas Costas') || (talento == 'Gíria dos ladrões') ) {
+          return '';
+        } else if ( talento == 'Usar Pergaminhos' ) {
+          return 0;
+        } else if (talento == 'Furtar Bolsos') {
+          if (destreza == 9) { return -15; }
+          else if (destreza == 10) { return -10; }
+          else if (destreza == 11) { return -5; }
+          else if (destreza == 12) { return 0; }
+          else if ( (destreza >= 13) && (destreza <= 15) ) { return 0; }
+          else if (destreza == 16) { return 0; }
+          else if (destreza == 17) { return 5; }
+          else if (destreza == 18) { return 10; }
+          else if (destreza == 19) { return 15; }
+          else { return 0; }
+        } else if (talento == 'Abrir Fechaduras') {
+          if (destreza == 9) { return -10; }
+          else if (destreza == 10) { return -5; }
+          else if (destreza == 11) { return 0; }
+          else if (destreza == 12) { return 0; }
+          else if ( (destreza >= 13) && (destreza <= 15) ) { return 0; }
+          else if (destreza == 16) { return 5; }
+          else if (destreza == 17) { return 10; }
+          else if (destreza == 18) { return 15; }
+          else if (destreza == 19) { return 20; }
+          else { return 0; }
+        } else if (talento == 'Achar/Desarmar Armadilhas') {
+          if (destreza == 9) { return -10; }
+          else if (destreza == 10) { return -10; }
+          else if (destreza == 11) { return -5; }
+          else if (destreza == 12) { return 0; }
+          else if ( (destreza >= 13) && (destreza <= 15) ) { return 0; }
+          else if (destreza == 16) { return 0; }
+          else if (destreza == 17) { return 0; }
+          else if (destreza == 18) { return 5; }
+          else if (destreza == 19) { return 10; }
+          else { return 0; }
+        } else if (talento == 'Mover-se em Silêncio') {
+          if (destreza == 9) { return -20; }
+          else if (destreza == 10) { return -15; }
+          else if (destreza == 11) { return -10; }
+          else if (destreza == 12) { return -5; }
+          else if ( (destreza >= 13) && (destreza <= 15) ) { return 0; }
+          else if (destreza == 16) { return 0; }
+          else if (destreza == 17) { return 5; }
+          else if (destreza == 18) { return 10; }
+          else if (destreza == 19) { return 15; }
+          else { return 0; }
+        } else if (talento == 'Esconder-se nas Sombras') {
+          if (destreza == 9) { return -10; }
+          else if (destreza == 10) { return -5; }
+          else if (destreza == 11) { return 0; }
+          else if (destreza == 12) { return 0; }
+          else if ( (destreza >= 13) && (destreza <= 15) ) { return 0; }
+          else if (destreza == 16) { return 0; }
+          else if (destreza == 17) { return 5; }
+          else if (destreza == 18) { return 10; }
+          else if (destreza == 19) { return 15; }
+          else { return 0; }
+        } else if ( talento == 'Ouvir Ruídos' ) {
+          return 0;
+        } else if ( talento == 'Escalar Muros' ) {
+          return 0;
+        } else if ( talento == 'Decifrar Linguagens' ) {
+          return 0;
+        } else { return 0; }
       }
 
       function sortear_dados_basicos(personagem, callback) {
@@ -3002,17 +3125,17 @@
           personagem["Habilidades"]["Carisma"]["Ajuste de reação"] = atributos_carisma("Ajuste de reação", carisma);
 
           /* Ajustar talentos dos ladinos */
-          if (CLASSES[classe]["Grupo"] == "Ladino") {
+          definir_talentos(classe, personagem, () => {
 
-          }
+            // 60 pontos talentos ladrão, sendo no maximo 30 por item
+            // movimentação
+            // calcular CA
+            // instrumento musical do bardo, já com a perícia
+            // perícia História Local para o bardo
 
-          // 60 pontos talentos ladrão, sendo no maximo 30 por item
-          // movimentação
-          // calcular CA
-          // instrumento musical do bardo, já com a perícia
-          // perícia História Local para o bardo
+            callback();
 
-          callback();
+          });
 
         });
       }
